Revised 20th Century scrape notebook and text file to a more clean version.

--- a/20th_century_scrape.ipynb
+++ b/20th_century_scrape.ipynb
@@ -1883,9 +1883,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f36d7f04-d104-4072-9893-db49b2ed4e03",
+   "metadata": {},
+   "source": [
+    "## Cleaning up 20th Century scraped file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9a6119f4-2f06-4338-8008-a3def69c744d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opening the text file\n",
+    "with open('20th_century_article_Wiki.txt', 'r', encoding='utf-8') as file:\n",
+    "    scraped_text = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "61a7b993-3012-44d3-841c-1eb4a6305e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing regex to help clean up text\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "11fa00dd-53b2-4dbf-95b8-22e2babc04f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing HTML tags and unwanted characters or symbols\n",
+    "def clean_html_and_symbols(text):\n",
+    "    \n",
+    "    text = re.sub(r'<.*?>', '', text)\n",
+    "\n",
+    "    \n",
+    "    text = re.sub(r'[^a-zA-Z0-9\\s.,!?\\'\"-]', '', text)\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3049be7f-5f1d-4300-84a9-4fb3c20c4c3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixing broken or duplicated sentences\n",
+    "def fix_broken_sentences(text):\n",
+    "   \n",
+    "    text = re.sub(r'(\\b[\\w\\s]+\\b)\\s+\\1', r'\\1', text)  \n",
+    "    \n",
+    "  \n",
+    "    text = re.sub(r'([.!?])([A-Za-z])', r'\\1 \\2', text)  \n",
+    "    \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "60a17325-d352-4bd5-8f73-85f1bfbff1b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Putting the cleaning functions into action\n",
+    "def clean_text(text):\n",
+    "    \n",
+    "    text = clean_html_and_symbols(text)\n",
+    "\n",
+    "   \n",
+    "    text = fix_broken_sentences(text)\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "de53ee99-ea5c-4b42-8623-96bcf0763e90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text = clean_text(scraped_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "15a112f3-603b-46bc-bf84-47eeebefbec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Writing the clean text to a new file\n",
+    "with open('20th_century_article.txt', 'w', encoding='utf-8') as file:\n",
+    "    file.write(cleaned_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ac48290-7d5b-46af-b2fb-6a3b2a62bcc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opening up the file again to remove white space \n",
+    "with open('20th_century_article.txt', 'r', encoding='utf-8') as file:\n",
+    "    whitespace_text = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "394f4c2f-488e-415f-b386-73e10ef3f8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_extra_whitespace(text):\n",
+    "   \n",
+    "    text = text.strip()\n",
+    "    \n",
+    "   \n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
+    "    \n",
+    "    return text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b85a0ed3-47d2-497c-92aa-e63164b5efc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned2_text = remove_extra_whitespace(whitespace_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a4619a06-e13b-4b23-9a7a-90a379c59198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the cleaned text to a new file\n",
+    "with open('20th_century_clean.txt', 'w', encoding='utf-8') as file:\n",
+    "    file.write(cleaned2_text)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d39d756-5a8c-4f68-8c51-17c0ab935b36",
+   "id": "2a33f8f9-7677-4105-bba7-a2d0c1afa4c3",
    "metadata": {},
    "outputs": [],
    "source": []
